# 3D_Renderer_from_scratch

./: CMakeLists.txt
data/: Shader.frag  objects
headers/: Camera.hpp  KeyboardHandler.hpp  World.hpp
source/: Camera.cpp  FileReader.cpp  World.cpp
